--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@ body {
  color: var(--clr-grey-1);
 }
 
-img {
- width: 100%;
- display: block;
+button {
+ border: none;
+ border-radius: var(--radius)
 }
