--- a/src/components/Preview/styles.css
+++ b/src/components/Preview/styles.css
@@ -89,3 +89,38 @@
  border: 1px solid #C8C8C8;
  margin-top: 15px;
 }
+
+.result-experience-title {
+ color: var(--clr-primary);
+ font-size: 18px;
+ text-align: start;
+ display: block;
+ margin-top: 24px;
+
+}
+
+.result-job-container {
+ display: flex;
+ font-weight: bold;
+ margin-top: 15px;
+}
+
+.result-employer-position {
+ margin-left: 7px;
+}
+
+.result-duration-container {
+ color: #909090;
+ display: flex;
+ margin-top: 7px;
+}
+
+.dash {
+ margin: 0 2px;
+}
+
+.result-description-container {
+ width: 100%;
+ line-height: 22px;
+ margin-top: 16px;
+}
