--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ Fonts
 
 @font-face {
  font-family: "HelveticaNeue";
- src: url(fonts/HelveticaNeue.ttc);
+ src: url(fonts/HelveticaNeue.ttc) format('truetype');
 }
 
 /*
@@ -58,15 +58,27 @@ p {
 
 button {
  border: none;
- border-radius: var(--radius)
+ border-radius: var(--radius);
+ font-weight: bold;
+ font-family: var(--ff-primary)
 }
 
 input {
+ background: #FFFFFF;
+ border: 1px solid #BCBCBC;
+ border-radius: 4px;
+ height: 48px;
  padding-left: 16px;
+ margin: 8px 0;
+}
+
+input::placeholder {
+ font-family: var(--ff-primary);
 }
 
 label {
  display: block;
+ font-weight: bold;
 }
 
 /* entire resume app is contained here */
@@ -84,4 +96,29 @@ label {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
+}
+
+/* page title */
+.page-title {
+ display: flex;
+ justify-content: space-evenly;
+ align-items: center;
+ padding-bottom: 12px;
+}
+
+.page-title h1 {
+ width: 100%;
+}
+
+/* left side of website */
+.fill-form-container {
+ display: flex;
+ flex-direction: column;
+ width: 100%;
+ padding: 0 120px;
+ padding-top: 45px;
+}
+
+.hint {
+ color: #2E2E2E;
 }
