--- a/src/components/PrivateInfo/styles.css
+++ b/src/components/PrivateInfo/styles.css
@@ -1,21 +1,10 @@
 /* private-info container items */
 .name-lastname-container {
  display: flex;
- padding-top: 45px;
  justify-content: space-around;
  gap: 56px;
 }
 
-textarea {
- resize: none;
- width: 100%;
- height: 103px;
- border-radius: var(--radius);
- padding-left: 16px;
- padding-top: 8px;
- margin-top: 8px;
-}
-
-textarea::placeholder {
- font-size: 16px;
+.p1-field {
+ margin-bottom: 0;
 }
