--- a/src/components/experience/styles.css
+++ b/src/components/experience/styles.css
@@ -1,25 +1,16 @@
-.experience-position-input-container,
-.experience-employer-input-container,
-.experience-description-input-container {
+.experience-employer-input-container {
  margin: 31px 0;
 }
 
 .experience-position-input-container {
- margin-top: 45px;
  margin-bottom: 30px;
 }
 
-.experience-description-input-container {
- margin-bottom: 45px;
-}
 
-.experience-position-input,
-.experience-employer-input,
-.experience-description-input,
+
+
 .user-start-date-input-container,
-.user-end-date-input-container,
-.user-start-date-input,
-.user-end-date-input {
+.user-end-date-input-container {
  width: 100%;
 }
 
@@ -32,11 +23,13 @@
 
 /* calendar */
 input[type="date"] {
- padding: 0.5em;
- font-size: 1em;
- border-radius: 0.25em;
+ padding: 13px 16px;
+ border-radius: 4px;
  border: 1px solid #ccc;
  position: relative;
+ color: var(--clr-input-placeholder);
+ line-height: 21px;
+ font-family: var(--ff-primary);
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
@@ -49,9 +42,15 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 }
 
+
+
 /* next-back buttons */
 .navigation-button-container {
  display: flex;
  width: 100%;
  justify-content: space-between;
+}
+
+.experience-description-input-container {
+ margin-top: 30px;
 }
