--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,7 @@ input {
  height: 48px;
  padding-left: 16px;
  margin: 8px 0;
+ width: 100%;
 }
 
 input::placeholder {
@@ -79,6 +80,24 @@ input::placeholder {
 label {
  display: block;
  font-weight: bold;
+}
+
+::placeholder {
+ color: var(--clr-input-placeholder);
+}
+
+textarea {
+ resize: none;
+ width: 100%;
+ height: 103px;
+ border-radius: var(--radius);
+ padding-left: 16px;
+ padding-top: 8px;
+ margin-top: 8px;
+}
+
+textarea::placeholder {
+ font-size: 16px;
 }
 
 /* entire resume app is contained here */
@@ -121,4 +140,12 @@ label {
 
 .hint {
  color: #2E2E2E;
+}
+
+.fieldes-container {
+ margin: 45px 0;
+}
+
+.input-line {
+ margin-top: 60px !important;
 }
