--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 /*
-=============== 
 Fonts
-===============
 */
 
 @font-face {
@@ -10,9 +8,7 @@ Fonts
 }
 
 /*
-=============== 
 Variables
-===============
 */
 
 :root {
@@ -34,9 +30,7 @@ Variables
 }
 
 /*
-=============== 
-Global Styles
-===============
+Global general Styles
 */
 
 *,
@@ -50,6 +44,7 @@ Global Styles
 body {
  font-family: var(--ff-primary);
  background: var(--White);
+ font-size: 16px;
 }
 
 p {
@@ -90,17 +85,43 @@ textarea {
  resize: none;
  width: 100%;
  height: 103px;
+ border: 1px solid #BCBCBC;
  border-radius: var(--radius);
  padding-left: 16px;
+ padding-right: 80px;
  padding-top: 8px;
  margin-top: 8px;
+ font-size: 16px;
 }
 
 textarea::placeholder {
  font-size: 16px;
 }
 
-/* entire resume app is contained here */
+input[type="text"],
+input[type='email'] {
+ font-size: 16px;
+ font-weight: bold;
+ font-family: var(--ff-primary);
+ color: var(--clr-offblack);
+ background-color: var(--white);
+}
+
+input[type="date"] {
+ font-size: 16px;
+ font-family: var(--ff-primary);
+ color: var(--black);
+ background-color: var(--white);
+}
+
+input:focus,
+textarea:focus {
+ outline: 2px solid #BCBCBC;
+}
+
+/* Global classes that can be used on multiple elements  */
+
+/* entire resume app is contained in resume-container */
 .resume-container {
  display: flex;
  flex-direction: row;
