--- a/src/components/Preview/styles.css
+++ b/src/components/Preview/styles.css
@@ -3,6 +3,7 @@
  position: relative;
  width: 85vw;
  padding: 0 80px;
+ min-height: 100vh;
  padding-bottom: 8rem;
  background: var(--white);
  padding-top: 45px;
@@ -69,7 +70,7 @@
  position: absolute;
  bottom: 0;
  left: 0;
- transform: translate(calc(80px), -80%);
+ transform: translate(80px, -80%);
 }
 
 /* preview underline */
