--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,7 @@ input {
  background: #FFFFFF;
  border: 1px solid #BCBCBC;
  border-radius: 4px;
- height: 48px;
+ padding: 12px 0;
  padding-left: 16px;
  margin: 8px 0;
  width: 100%;
@@ -92,6 +92,10 @@ textarea {
  padding-top: 8px;
  margin-top: 8px;
  font-size: 16px;
+ font-weight: bold;
+ font-family: var(--ff-primary);
+ color: var(--clr-offblack);
+ background-color: var(--white);
 }
 
 textarea::placeholder {
