--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,7 @@ input {
  border: 1px solid #BCBCBC;
  border-radius: 4px;
  padding: 12px 0;
+ caret-color: #6499FF;
  padding-left: 16px;
  margin: 8px 0;
  width: 100%;
