--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,8 @@ textarea::placeholder {
 }
 
 input[type="text"],
-input[type='email'] {
+input[type='email'],
+select {
  font-size: 16px;
  font-weight: bold;
  font-family: var(--ff-primary);
