--- a/src/components/Education/styles.css
+++ b/src/components/Education/styles.css
@@ -15,10 +15,14 @@
 }
 
 .degrees-select {
- background: var(--white);
  padding: 13px 16px;
- margin: 8px 0;
+ height: 51px;
  border-radius: 4px;
+ border: 1px solid #ccc;
+ position: relative;
  color: var(--clr-input-placeholder);
+ line-height: 21px;
+ font-family: var(--ff-primary);
+ margin: 8px 0;
  width: 100%;
 }
