--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@ Fonts
 */
 
 @font-face {
- font-family: "HelveticaNeue";
- src: url("/src/fonts/HelveticaNeue.ttc") format("TTC");
+ font-family: "Helvetica Neue";
+ src: url(/src/fonts/HelveticaNeue.ttc) format("TTC");
 }
 
 /*
@@ -23,7 +23,7 @@ Variables
  --clr-validation-success: #98E37E;
  --clr-validation-danger: #EF5050;
  --clr-offblack: #1A1A1A;
- --ff-primary: "HelveticaNeue", sans-serif;
+ --ff-primary: "Helvetica Neue";
  --transition: all 0.3s linear;
  --radius: 4px;
  --line-hight: 21px;
@@ -185,4 +185,10 @@ textarea:focus {
 
 .input-line {
  margin-top: 60px !important;
+}
+
+.image-validation-icon {
+ top: 50%;
+ left: 45%;
+ transform: translate(-100%, -50%) !important;
 }
