--- a/src/components/Preview/styles.css
+++ b/src/components/Preview/styles.css
@@ -2,6 +2,7 @@
 .result-container {
  position: relative;
  min-width: 822px;
+ max-width: 822px;
  min-height: 1080px;
  height: fit-content;
  padding: 0 75px;
