--- a/src/components/FinalPage/styles.css
+++ b/src/components/FinalPage/styles.css
@@ -7,4 +7,40 @@
  padding: 45px 75px 8rem;
  position: relative;
  border: 0.8px solid #000000;
+ position: relative;
+}
+
+.pop-up {
+ position: absolute;
+ width: 427px;
+ max-width: 427px;
+ height: 167px;
+ transform: translate(190%, -30%);
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ background: #FFFFFF;
+ border: 1px solid #E4E4E4;
+ box-shadow: 0px 4px 28px rgba(0, 0, 0, 0.25);
+ border-radius: 8px;
+ transition: 0.3s all linear;
+}
+
+.pop-up h2 {
+ font-weight: 500;
+ max-width: 360px;
+ font-size: 28px;
+ word-break: normal;
+}
+
+.container-pop-up {
+ position: relative;
+}
+
+.close-pop-up {
+ position: absolute;
+ top: 0;
+ right: 0;
+ transform: translate(150%, -200%);
 }
